proxima-macros/tests/ui/span_carrier_no_field.stderr
error: #[derive(SpanCarrier)] requires a field named `span_id: Option<SpanId>` or a field annotated with `#[span_id]`
 --> tests/ui/span_carrier_no_field.rs:4:10
  |
4 | #[derive(SpanCarrier)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SpanCarrier` (in Nightly builds, run with -Z macro-backtrace for more info)
